<resources>
    <string name="_1405_xr">1405-XR</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_app">О приложении</string>
    <string name="about_message">This software uses map data provided by OpenStreetMap.org</string>
    <string name="app_name">e-Mark</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="base">OSM base layer</string>
    <string name="base_nl">Netherlands base overlay</string>
    <string name="bing">Bing</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">Отмена</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="compass">Compass</string>
    <string name="copy">Copy</string>
    <string name="cyclemap">Cycle Map</string>
    <string name="default_web_client_id">741380146849-setgfpm6cc37mn8bk66lui3u7boeg720.apps.googleusercontent.com</string>
    <string name="delete_local">Удалить локально</string>
    <string name="depth">Глубина, м</string>
    <string name="download">Загрузить</string>
    <string name="download_date_x">Дата загрузки:\10%1$s</string>
    <string name="enter_value">Введите значение</string>
    <string name="error">Ошибка</string>
    <string name="error_data_loading">Ошибка при загрузке данных</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fiets_nl">OpenFietsKaart overlay</string>
    <string name="find_project">Найти проект</string>
    <string name="firebase_database_url">https://sapasoft-a02de.firebaseio.com</string>
    <string name="first_fix_message">Got the first fix</string>
    <string name="format_distance_feet">%s ft</string>
    <string name="format_distance_kilometers">%s km</string>
    <string name="format_distance_meters">%s m</string>
    <string name="format_distance_miles">%s mi</string>
    <string name="format_distance_nautical_miles">%s nm</string>
    <string name="format_distance_only_foot">ft</string>
    <string name="format_distance_only_kilometer">km</string>
    <string name="format_distance_only_meter">m</string>
    <string name="format_distance_only_mile">mi</string>
    <string name="format_distance_only_nautical_mile">nm</string>
    <string name="format_distance_value_unit">%1$s %2$s</string>
    <string name="gcm_defaultSenderId">741380146849</string>
    <string name="google_api_key">AIzaSyA0mmKG_PlC3001SLP3XKhM0mG_OVpASqI</string>
    <string name="google_app_id">1:741380146849:android:8555a691121155b9fad2e0</string>
    <string name="google_crash_reporting_api_key">AIzaSyA0mmKG_PlC3001SLP3XKhM0mG_OVpASqI</string>
    <string name="google_storage_bucket">sapasoft-a02de.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hills">Hills</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="identifier">Идентификатор</string>
    <string name="last_marker_data">Данные последнего маркера</string>
    <string name="loading">Пожалуйста подождите...</string>
    <string name="location_not_found">Местоположение не определено</string>
    <string name="login">Войти</string>
    <string name="low_accuracy_continue">Точность определения метосоположения слишком мала %1$d м. Продолжить создание маркера?</string>
    <string name="low_gps_accuracy">Неточное местоположение</string>
    <string name="manual_navigation">Ручная навигация</string>
    <string name="map">Карта</string>
    <string name="map_mode">Map Source</string>
    <string name="mapbox">MapBox</string>
    <string name="mapnik">Mapnik</string>
    <string name="mapquest_aerial">Mapquest Aerial</string>
    <string name="mapquest_osm">Mapquest</string>
    <string name="marker">Маркер</string>
    <string name="marker_size">Размер маркера</string>
    <string name="messages_header">Messages</string>
    <string name="model">Модель</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="mtrl_slider_range_content_description">%1$s to %2$s</string>
    <string name="my_location">My location</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="nav_item_about">О приложении</string>
    <string name="nav_item_main">Проекты</string>
    <string name="nav_item_qr">Title</string>
    <string name="nav_item_settings">Настройки</string>
    <string name="no">Нет</string>
    <string name="no_internet_connection">Нет интернет соединения</string>
    <string name="not_set">Not set</string>
    <string name="offline">Offline mode</string>
    <string name="offline_mode">Режим оффлайн</string>
    <string name="osmbonuspack.directions.1">Continue[ on %s]</string>
    <string name="osmbonuspack.directions.12">U-Turn[ on %s]</string>
    <string name="osmbonuspack.directions.17">Take the ramp on the left[ on %s]</string>
    <string name="osmbonuspack.directions.18">Take the ramp on the right[ on %s]</string>
    <string name="osmbonuspack.directions.19">Take the ramp straight ahead[ on %s]</string>
    <string name="osmbonuspack.directions.2">[Go on %s]</string>
    <string name="osmbonuspack.directions.24">You have reached a waypoint of your trip</string>
    <string name="osmbonuspack.directions.27">Enter roundabout and leave at first exit[ on %s]</string>
    <string name="osmbonuspack.directions.28">Enter roundabout and leave at second exit[ on %s]</string>
    <string name="osmbonuspack.directions.29">Enter roundabout and leave at third exit[ on %s]</string>
    <string name="osmbonuspack.directions.3">Turn slight left[ on %s]</string>
    <string name="osmbonuspack.directions.30">Enter roundabout and leave at fourth exit[ on %s]</string>
    <string name="password">Пароль</string>
    <string name="retry">Повторить</string>
    <string name="server_port">http[s]://сервер:порт</string>
    <string name="username">Имя пользователя</string>
    <string name="welcome">Добро пожаловать!</string>
</resources>