<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:tag="layout/fragment_projects_0">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="binding_1"
        app:elevation="0dp">

        <include layout="@layout/toolbar_main" />
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/abl_toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/search_rounded"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:hint="@string/find_project"
        android:padding="15dp"
        android:tag="binding_2"
        android:textSize="12sp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/et_search"
        android:layout_marginTop="8dp"
        android:tag="binding_3">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_exhibits"
            android:background="@color/white" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/ll_connection_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/et_search"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_connection_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_data_loading" />

        <TextView
            android:id="@+id/tv_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/retry"
            android:textColor="@color/color_3062EF" />
    </LinearLayout>
</RelativeLayout>
